Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
                 <h1>Este es el titulo atractivo e interesante del post </h1>
                 <p>Y este es el parrafo de inicio donde vamos a esplicar
                 las cosas increibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de conpartir información y tus ideas.
+                    Mucho más que ir a conferencias o salir en youtube. Exepto si eres un
+                    rockstar. pero esadisticamente no lo eres.... por ahora.</p>
             </div>
         </div>
     </body>
