Agrege suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post </h1>
@@ -16,6 +16,7 @@
                 <p>Los blogs son la mejor forma de conpartir información y tus ideas.
                     Mucho más que ir a conferencias o salir en youtube. Exepto si eres un
                     rockstar. pero esadisticamente no lo eres.... por ahora.</p>
+                    <p>suscribete y dale like</p>
             </div>
         </div>
     </body>
